Prevent layout shifts in header on changing pages

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -6,6 +6,7 @@
   font-size: 1.2rem;
 
   #logo {
+    width: min(250px, 50vw);
     max-height: 60px;
     max-width: 50vw;
   }
@@ -34,6 +35,10 @@
     margin-left: auto;
     padding-left: 1em;
     padding-right: 1em;
+
+    @media (max-width: 300px) {
+      margin-left: 0;
+    }
   }
   
   .navbar-burger {
